--- a/minimal-mistakes-master/docs/_layouts/default.html
+++ b/minimal-mistakes-master/docs/_layouts/default.html
@@ -37,12 +37,12 @@
       </div>
     {% endif %}
 
-    <div class="page__footer">
+    <!-- <div class="page__footer">
       <footer>
         {% include footer/custom.html %}
         {% include footer.html %}
       </footer>
-    </div>
+    </div> -->
 
     {% include scripts.html %}
     <style>
